--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Windows\System32\SHELL32.dll,45
+IconResource=C:\Users\tung1\Downloads\git_icon_p8m_1.ico,0
 [ViewState]
 Mode=
 Vid=
